--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-dateutil>=2.8.2
 
 # Django
 django>=4.2,<5.0
+python-dotenv>=1.0.0
 
 # Base de datos
 dj-database-url>=2.1.0
@@ -15,3 +16,7 @@ psycopg2-binary>=2.9.9
 # Servidor de producción
 gunicorn>=21.2.0
 whitenoise>=6.6.0
+
+# Google Sheets API
+gspread>=5.12.0
+google-auth>=2.23.0
