--- a/web/.env.example
+++ b/web/.env.example
@@ -20,16 +20,36 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 # Base de Datos PostgreSQL (Producción)
 # ===========================================
 # Railway proporciona DATABASE_URL automáticamente
-# Si usas otra plataforma, configura estas variables:
+# Si usas otra plataforma, configura esta variable:
 
 DATABASE_URL=postgresql://usuario:password@host:5432/nombre_db
 
-# O configura individualmente:
-# DB_NAME=huellero_db
-# DB_USER=postgres
-# DB_PASSWORD=tu_password
-# DB_HOST=localhost
-# DB_PORT=5432
+# ===========================================
+# Google Sheets API
+# ===========================================
+# OPCIÓN 1 (Producción/Railway): JSON completo de las credenciales
+# Copiar todo el contenido del archivo nomina.json en una sola línea
+# GOOGLE_CREDENTIALS_JSON={"type":"service_account","project_id":"..."}
+
+# OPCIÓN 2 (Desarrollo local): Ruta al archivo de credenciales
+GOOGLE_CREDENTIALS_FILE=credentials/nomina.json
+
+# ID del libro de Google Sheets (de la URL)
+# Ejemplo: https://docs.google.com/spreadsheets/d/ESTE_ES_EL_ID/edit
+GOOGLE_SHEET_ID=tu-spreadsheet-id-aqui
+
+# ===========================================
+# Email (Notificaciones Gmail)
+# ===========================================
+# Cuenta de Gmail para enviar notificaciones
+EMAIL_HOST_USER=tu-correo@gmail.com
+
+# App Password de Gmail (16 caracteres, sin espacios)
+# Generar en: https://myaccount.google.com/apppasswords
+EMAIL_HOST_PASSWORD=xxxx-xxxx-xxxx-xxxx
+
+# Email del coordinador que recibe las notificaciones
+EMAIL_COORDINADOR=coordinador@ejemplo.com
 
 # ===========================================
 # Configuración adicional de producción
