adiocion de web hook

--- a/web/.env.example
+++ b/web/.env.example
@@ -52,6 +52,12 @@ EMAIL_HOST_PASSWORD=xxxx-xxxx-xxxx-xxxx
 EMAIL_COORDINADOR=coordinador@ejemplo.com
 
 # ===========================================
+# Webhooks (AppSheet)
+# ===========================================
+# Token secreto para validar webhooks de AppSheet
+WEBHOOK_SECRET_TOKEN=tu-token-secreto-aqui
+
+# ===========================================
 # Configuración adicional de producción
 # ===========================================
 # CSRF_TRUSTED_ORIGINS=https://tu-dominio.railway.app
